# libwitutil

./: Makefile.am  README  configure.ac  genautotools.ini
src/: utils.c  witutil.h
